k8s/rollouts/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-api-stable
  namespace: app-dev
  labels:
    app: orders-api
spec:
  type: ClusterIP
  selector:
    app: orders-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
